# HDAG-Kalshi-C

./: .env.example  .gitignore  README.md  pyproject.toml
app/: auth.py  client.py  config.py  dto.py  logging_config.py
app/ingest/: events.py  markets.py  orderbooks.py  portfolio.py  trades.py  websocket_consumer.py
app/services/: phase_tagging.py
app/storage/: db.py  repositories.py  schema.sql
platform/: README.md  backtest.py  db.py  engine.py  index.html  main.py  package-lock.json  package.json  portfolio.py  seed_demo.py
platform/src/: App.css  App.jsx  api.js
platform/src/components/: BacktestPanel.jsx  OrderEntry.jsx  PortfolioSummary.jsx  PositionsTable.jsx  RiskPanel.jsx  TradeLog.jsx
scripts/: bootstrap_db.py  poll_orderbooks.py  stream_market_data.py  sync_markets.py  sync_portfolio.py  sync_trades.py
tests/: test_auth.py  test_client.py  test_config.py  test_db.py  test_dto.py  test_events.py  test_logging_config.py  test_markets.py  test_orderbooks.py  test_phase_tagging.py  test_portfolio.py  test_repositories.py  test_trades.py  test_websocket.py  test_websocket_consumer.py
